TP3/generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement ; programme
Rule 2     programme -> statement
Rule 3     statement -> assignation
Rule 4     statement -> structure
Rule 5     statement -> PRINT expression
Rule 6     structure -> WHILE expression { programme }
Rule 7     assignation -> IDENTIFIER = expression
Rule 8     expression -> IDENTIFIER
Rule 9     expression -> NUMBER
Rule 10    expression -> ADD_OP expression
Rule 11    expression -> ( expression )
Rule 12    expression -> expression ADD_OP expression
Rule 13    expression -> expression MUL_OP expression

Terminals, with rules where they appear

(                    : 11
)                    : 11
;                    : 1
=                    : 7
ADD_OP               : 10 12
IDENTIFIER           : 7 8
MUL_OP               : 13
NUMBER               : 9
PRINT                : 5
WHILE                : 6
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignation          : 3
expression           : 5 6 7 10 11 12 12 13 13
programme            : 1 6 0
statement            : 1 2
structure            : 4

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement ; programme
    (2) programme -> . statement
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (7) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7

    programme                      shift and go to state 1
    statement                      shift and go to state 2
    assignation                    shift and go to state 3
    structure                      shift and go to state 4

state 1

    (0) S' -> programme .



state 2

    (1) programme -> statement . ; programme
    (2) programme -> statement .

    ;               shift and go to state 8
    $end            reduce using rule 2 (programme -> statement .)
    }               reduce using rule 2 (programme -> statement .)


state 3

    (3) statement -> assignation .

    ;               reduce using rule 3 (statement -> assignation .)
    $end            reduce using rule 3 (statement -> assignation .)
    }               reduce using rule 3 (statement -> assignation .)


state 4

    (4) statement -> structure .

    ;               reduce using rule 4 (statement -> structure .)
    $end            reduce using rule 4 (statement -> structure .)
    }               reduce using rule 4 (statement -> structure .)


state 5

    (5) statement -> PRINT . expression
    (8) expression -> . IDENTIFIER
    (9) expression -> . NUMBER
    (10) expression -> . ADD_OP expression
    (11) expression -> . ( expression )
    (12) expression -> . expression ADD_OP expression
    (13) expression -> . expression MUL_OP expression

    IDENTIFIER      shift and go to state 10
    NUMBER          shift and go to state 11
    ADD_OP          shift and go to state 12
    (               shift and go to state 13

    expression                     shift and go to state 9

state 6

    (7) assignation -> IDENTIFIER . = expression

    =               shift and go to state 14


state 7

    (6) structure -> WHILE . expression { programme }
    (8) expression -> . IDENTIFIER
    (9) expression -> . NUMBER
    (10) expression -> . ADD_OP expression
    (11) expression -> . ( expression )
    (12) expression -> . expression ADD_OP expression
    (13) expression -> . expression MUL_OP expression

    IDENTIFIER      shift and go to state 10
    NUMBER          shift and go to state 11
    ADD_OP          shift and go to state 12
    (               shift and go to state 13

    expression                     shift and go to state 15

state 8

    (1) programme -> statement ; . programme
    (1) programme -> . statement ; programme
    (2) programme -> . statement
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (7) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7

    statement                      shift and go to state 2
    programme                      shift and go to state 16
    assignation                    shift and go to state 3
    structure                      shift and go to state 4

state 9

    (5) statement -> PRINT expression .
    (12) expression -> expression . ADD_OP expression
    (13) expression -> expression . MUL_OP expression

    ;               reduce using rule 5 (statement -> PRINT expression .)
    $end            reduce using rule 5 (statement -> PRINT expression .)
    }               reduce using rule 5 (statement -> PRINT expression .)
    ADD_OP          shift and go to state 17
    MUL_OP          shift and go to state 18


state 10

    (8) expression -> IDENTIFIER .

    ADD_OP          reduce using rule 8 (expression -> IDENTIFIER .)
    MUL_OP          reduce using rule 8 (expression -> IDENTIFIER .)
    ;               reduce using rule 8 (expression -> IDENTIFIER .)
    $end            reduce using rule 8 (expression -> IDENTIFIER .)
    }               reduce using rule 8 (expression -> IDENTIFIER .)
    {               reduce using rule 8 (expression -> IDENTIFIER .)
    )               reduce using rule 8 (expression -> IDENTIFIER .)


state 11

    (9) expression -> NUMBER .

    ADD_OP          reduce using rule 9 (expression -> NUMBER .)
    MUL_OP          reduce using rule 9 (expression -> NUMBER .)
    ;               reduce using rule 9 (expression -> NUMBER .)
    $end            reduce using rule 9 (expression -> NUMBER .)
    }               reduce using rule 9 (expression -> NUMBER .)
    {               reduce using rule 9 (expression -> NUMBER .)
    )               reduce using rule 9 (expression -> NUMBER .)


state 12

    (10) expression -> ADD_OP . expression
    (8) expression -> . IDENTIFIER
    (9) expression -> . NUMBER
    (10) expression -> . ADD_OP expression
    (11) expression -> . ( expression )
    (12) expression -> . expression ADD_OP expression
    (13) expression -> . expression MUL_OP expression

    IDENTIFIER      shift and go to state 10
    NUMBER          shift and go to state 11
    ADD_OP          shift and go to state 12
    (               shift and go to state 13

    expression                     shift and go to state 19

state 13

    (11) expression -> ( . expression )
    (8) expression -> . IDENTIFIER
    (9) expression -> . NUMBER
    (10) expression -> . ADD_OP expression
    (11) expression -> . ( expression )
    (12) expression -> . expression ADD_OP expression
    (13) expression -> . expression MUL_OP expression

    IDENTIFIER      shift and go to state 10
    NUMBER          shift and go to state 11
    ADD_OP          shift and go to state 12
    (               shift and go to state 13

    expression                     shift and go to state 20

state 14

    (7) assignation -> IDENTIFIER = . expression
    (8) expression -> . IDENTIFIER
    (9) expression -> . NUMBER
    (10) expression -> . ADD_OP expression
    (11) expression -> . ( expression )
    (12) expression -> . expression ADD_OP expression
    (13) expression -> . expression MUL_OP expression

    IDENTIFIER      shift and go to state 10
    NUMBER          shift and go to state 11
    ADD_OP          shift and go to state 12
    (               shift and go to state 13

    expression                     shift and go to state 21

state 15

    (6) structure -> WHILE expression . { programme }
    (12) expression -> expression . ADD_OP expression
    (13) expression -> expression . MUL_OP expression

    {               shift and go to state 22
    ADD_OP          shift and go to state 17
    MUL_OP          shift and go to state 18


state 16

    (1) programme -> statement ; programme .

    $end            reduce using rule 1 (programme -> statement ; programme .)
    }               reduce using rule 1 (programme -> statement ; programme .)


state 17

    (12) expression -> expression ADD_OP . expression
    (8) expression -> . IDENTIFIER
    (9) expression -> . NUMBER
    (10) expression -> . ADD_OP expression
    (11) expression -> . ( expression )
    (12) expression -> . expression ADD_OP expression
    (13) expression -> . expression MUL_OP expression

    IDENTIFIER      shift and go to state 10
    NUMBER          shift and go to state 11
    ADD_OP          shift and go to state 12
    (               shift and go to state 13

    expression                     shift and go to state 23

state 18

    (13) expression -> expression MUL_OP . expression
    (8) expression -> . IDENTIFIER
    (9) expression -> . NUMBER
    (10) expression -> . ADD_OP expression
    (11) expression -> . ( expression )
    (12) expression -> . expression ADD_OP expression
    (13) expression -> . expression MUL_OP expression

    IDENTIFIER      shift and go to state 10
    NUMBER          shift and go to state 11
    ADD_OP          shift and go to state 12
    (               shift and go to state 13

    expression                     shift and go to state 24

state 19

    (10) expression -> ADD_OP expression .
    (12) expression -> expression . ADD_OP expression
    (13) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 10 (expression -> ADD_OP expression .)
    MUL_OP          reduce using rule 10 (expression -> ADD_OP expression .)
    ;               reduce using rule 10 (expression -> ADD_OP expression .)
    $end            reduce using rule 10 (expression -> ADD_OP expression .)
    }               reduce using rule 10 (expression -> ADD_OP expression .)
    {               reduce using rule 10 (expression -> ADD_OP expression .)
    )               reduce using rule 10 (expression -> ADD_OP expression .)

  ! ADD_OP          [ shift and go to state 17 ]
  ! MUL_OP          [ shift and go to state 18 ]


state 20

    (11) expression -> ( expression . )
    (12) expression -> expression . ADD_OP expression
    (13) expression -> expression . MUL_OP expression

    )               shift and go to state 25
    ADD_OP          shift and go to state 17
    MUL_OP          shift and go to state 18


state 21

    (7) assignation -> IDENTIFIER = expression .
    (12) expression -> expression . ADD_OP expression
    (13) expression -> expression . MUL_OP expression

    ;               reduce using rule 7 (assignation -> IDENTIFIER = expression .)
    $end            reduce using rule 7 (assignation -> IDENTIFIER = expression .)
    }               reduce using rule 7 (assignation -> IDENTIFIER = expression .)
    ADD_OP          shift and go to state 17
    MUL_OP          shift and go to state 18


state 22

    (6) structure -> WHILE expression { . programme }
    (1) programme -> . statement ; programme
    (2) programme -> . statement
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (7) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 6
    WHILE           shift and go to state 7

    programme                      shift and go to state 26
    statement                      shift and go to state 2
    assignation                    shift and go to state 3
    structure                      shift and go to state 4

state 23

    (12) expression -> expression ADD_OP expression .
    (12) expression -> expression . ADD_OP expression
    (13) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 12 (expression -> expression ADD_OP expression .)
    ;               reduce using rule 12 (expression -> expression ADD_OP expression .)
    $end            reduce using rule 12 (expression -> expression ADD_OP expression .)
    }               reduce using rule 12 (expression -> expression ADD_OP expression .)
    {               reduce using rule 12 (expression -> expression ADD_OP expression .)
    )               reduce using rule 12 (expression -> expression ADD_OP expression .)
    MUL_OP          shift and go to state 18

  ! MUL_OP          [ reduce using rule 12 (expression -> expression ADD_OP expression .) ]
  ! ADD_OP          [ shift and go to state 17 ]


state 24

    (13) expression -> expression MUL_OP expression .
    (12) expression -> expression . ADD_OP expression
    (13) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 13 (expression -> expression MUL_OP expression .)
    MUL_OP          reduce using rule 13 (expression -> expression MUL_OP expression .)
    ;               reduce using rule 13 (expression -> expression MUL_OP expression .)
    $end            reduce using rule 13 (expression -> expression MUL_OP expression .)
    }               reduce using rule 13 (expression -> expression MUL_OP expression .)
    {               reduce using rule 13 (expression -> expression MUL_OP expression .)
    )               reduce using rule 13 (expression -> expression MUL_OP expression .)

  ! ADD_OP          [ shift and go to state 17 ]
  ! MUL_OP          [ shift and go to state 18 ]


state 25

    (11) expression -> ( expression ) .

    ADD_OP          reduce using rule 11 (expression -> ( expression ) .)
    MUL_OP          reduce using rule 11 (expression -> ( expression ) .)
    ;               reduce using rule 11 (expression -> ( expression ) .)
    $end            reduce using rule 11 (expression -> ( expression ) .)
    }               reduce using rule 11 (expression -> ( expression ) .)
    {               reduce using rule 11 (expression -> ( expression ) .)
    )               reduce using rule 11 (expression -> ( expression ) .)


state 26

    (6) structure -> WHILE expression { programme . }

    }               shift and go to state 27


state 27

    (6) structure -> WHILE expression { programme } .

    ;               reduce using rule 6 (structure -> WHILE expression { programme } .)
    $end            reduce using rule 6 (structure -> WHILE expression { programme } .)
    }               reduce using rule 6 (structure -> WHILE expression { programme } .)

